--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -1,105 +1,105 @@
 ﻿l_english:
  KLK_main:0 "Encroaching Capitalists"
- KLK_main_desc:0 ""
+ KLK_main_desc:0 "The worldwide economic collapse has left us nearly defenseless against the corporate bullies and vultures of the world. Our economy must be strengthened to rebuff the rapacious capitalists!"
  KLK_oligarchy:0 "Invite the Companies"
- KLK_oligarchy_desc:0 ""
+ KLK_oligarchy_desc:0 "What better way to protect against the capitalists than to make them work for us? By creating carefully crafted regulations, but allowing significant freedoms, we can bring the capitalists to our shore on our terms."
  KLK_leftism:0 "Protect the Nirakshe"
  KLK_leftism_desc:0 "The Nirakshe, or the Expectation, is the duty every Indo-Lemurian citizen has of sharing the products of his work with the local community. We can't let the foreign individualist values undermine the very fabric of the people's morality with greed and selfishness!"
  KLK_oligarchy_2:0 "Deregulate the Industrial Sector"
- KLK_oligarchy_2_desc:0 ""
+ KLK_oligarchy_2_desc:0 "Each government regulation needs to be scrutinized to determine its effect on our businesses and production sector. If it interferes with industry then it should be eliminated."
  KLK_stalinism:0 "Governmental Leadership"
- KLK_stalinism_desc:0 ""
+ KLK_stalinism_desc:0 "Iosef Stalin has followed in the true path of the Glorious Socialist Revolution. By studying his innovations we can improve our own approach to the Revolution."
  KLK_syndicalism:0 "Worker's Self-Governance"
- KLK_syndicalism_desc:0 ""
+ KLK_syndicalism_desc:0 "Our history teaches us that the village councils, the Mandalam, are most effective at making decisions for the people by the people. By increasing their power locally, and by integrating them into a larger National Mandala, we can bring prosperity to our people."
  KLK_olig_mil:0 "Prepare for the Backlash"
- KLK_olig_mil_desc:0 ""
+ KLK_olig_mil_desc:0 "The people will not like the changes that must take place to maintain our economic growth and independence. We must prepare for the inevitable backlash."
  KLK_olig_cult:0 "A Cultural Shift"
- KLK_olig_cult_desc:0 ""
+ KLK_olig_cult_desc:0 "A word here, a billboard there, some judiciously applied bribes to political and cultural figures - this will be the most effective method of dealing with the national furore at the changes to our economic model."
  KLK_olig_mil_1:0 "Hire Mercenaries"
- KLK_olig_mil_1_desc:0 ""
- KLK_olig_center:0 "Deal with Dissidence"
- KLK_olig_center_desc:0 ""
+ KLK_olig_mil_1_desc:0 "As distasteful as it may be, we must pass laws that will allow us to hire mercenary forces to enforce the will of the rightfully elected government of the people against rebels and treasonous nay-sayers."
+ KLK_olig_center:0 "Deal with Dissent"
+ KLK_olig_center_desc:0 "If we coopt one of our largest critics and give him a position with enough prestige and clout he might be willing to fall in line and help our cause."
  KLK_olig_cult_1:0 "Foreign Media Licensing"
- KLK_olig_cult_1_desc:0 ""
+ KLK_olig_cult_1_desc:0 "History has shown that the media conglomerates of the West have been very useful in spreading the 'Gospel of Wealth' which has allowed the rise of powerful industry and national stability. We should invite some of them in to help us with our growth."
  KLK_olig_center_left:0 "Pass the Property Violation Act"
- KLK_olig_center_left_desc:0 ""
+ KLK_olig_center_left_desc:0 "\"Any industrial owner whose property is found to be encroached upon shall have the right to demand satisfaction from the government not limited to, but including, the seizure of the real estate immediately abutting the encroached upon property.\""
  KLK_olig_center_right:0 "Support the Liberals"
- KLK_olig_center_right_desc:0 ""
+ KLK_olig_center_right_desc:0 "We support significant powers that protect the rights of businesses, but we must also support the common man. As long as the electorate feel like they have protections under the law they will continue to support our reforms."
  KLK_olig_center_2:0 "Control the Leftist Movements"
- KLK_olig_center_2_desc:0 ""
+ KLK_olig_center_2_desc:0 "Subtle control of the growing Leftist movements will allow us to continue to make money while garnering the votes that will keep us in power."
  KLK_olig_mil_2:0 "Police Crackdowns"
- KLK_olig_mil_2_desc:0 ""
+ KLK_olig_mil_2_desc:0 "The police require help to prevent insurrection by radical elements in socity. By coopting them into the military organizational structure we can ensure that they are well trained and equipped."
  KLK_olig_cult_2:0 "Import American Media"
- KLK_olig_cult_2_desc:0 ""
+ KLK_olig_cult_2_desc:0 "None of the media conglomerates is effective as those from America. Perhaps we can tempt some of them to bring their friendly media presence to our nation."
  KLK_olig_mil_left:0 "American Arms Companies"
- KLK_olig_mil_left_desc:0 ""
+ KLK_olig_mil_left_desc:0 "Winchester, Smith & Wesson, and Colt are all American arms manufacturers that we should be trying to attract. If we provide favorable conditions for them to set up production lines they might help us to develop and build up our own arms companies."
  KLK_olig_mil_right:0 "Privatize Common Lands"
- KLK_olig_mil_right_desc:0 ""
+ KLK_olig_mil_right_desc:0 "They've served their purpose, but having large swaths of public lands in and around our cities is a terrible waste! By selling these lands to private companies we can grow and strengthen our economy. We can only hope that the people won't care about these sales."
  KLK_olig_cult_3:0 "Promote Consumerist Holidays"
- KLK_olig_cult_3_desc:0 ""
+ KLK_olig_cult_3_desc:0 "'Krismis', Valentine's Day and other consumer holidays appropriately promoted could bring a needed boost to our economy and give our people some much needed distraction. We don't have to be French to eat french toast."
  KLK_olig_final:0 "The Deep State"
- KLK_olig_final_desc:0 ""
+ KLK_olig_final_desc:0 "The Lefitists continue to hide in the nooks and crannies of government just waiting for a chance to pop out and destroy us. Careful scrutiny of the backgrounds, acquaintances, family members, and associations of government ministers could help us to root out these insurgets."
  KLK_stal_center_1:0 "The Regulatory Organizations"
- KLK_stal_center_1_desc:0 ""
+ KLK_stal_center_1_desc:0 "Departments of government, each with its own mandate, could help to institute the necessary changes in rules and regulations to allow Socialism to flourish."
  KLK_stal_center_2:0 "The Secret Police"
- KLK_stal_center_2_desc:0 ""
+ KLK_stal_center_2_desc:0 "Elimination of the subversive, evil capitalists is necessary to the survival of the Revolution. By providing the police with a covert arm to root out these counterrevolutionaries we can stabilize our nation."
  KLK_stal_center_3:0 "Suppress the Syndicalists"
- KLK_stal_center_3_desc:0 ""
+ KLK_stal_center_3_desc:0 "Mandalism is almost an acceptable path to socialism, but it is far too enmeshed with religious and parochial cultural concepts. By continuous education we can help the people to understand that Mandalism is a false system that is a counterfeit for True Socialism."
  KLK_stal_center_4:0 "Allies Abroad"
- KLK_stal_center_4_desc:0 ""
+ KLK_stal_center_4_desc:0 "The Soviets have sent diplomatic embassies to us to open bilateral relations."
  KLK_stal_center_5:0 "Treaty with the Soviets"
- KLK_stal_center_5_desc:0 ""
+ KLK_stal_center_5_desc:0 "Aligning with the Soviets is not only wise, but it is desirable. They have developed further along the path of Socialism and can help us in our glorious revolution!"
  KLK_stal_final:0 "The Reformed Nation"
- KLK_stal_final_desc:0 ""
+ KLK_stal_final_desc:0 "Our Soviet advisors have pointed out to us some of the remaining challenges to the Revolution left in Kalari. We must continue to reform our laws and culture to eliminate these vestiges of the past."
  KLK_stal_left_1:0 "The Department of Education"
- KLK_stal_left_1_desc:0 ""
+ KLK_stal_left_1_desc:0 "\"The provision of education should no longer be left to the local mandalam, but must be provided by proper Government." We cannot allow the mandalam to continue to promote their backward and counterrevolutionary filth."
  KLK_stal_left_2:0 "Compulsory Education"
- KLK_stal_left_2_desc:0 ""
+ KLK_stal_left_2_desc:0 "\"A good worker is an educated worker.\" We must bring a proper socialist education to our people in order to help them develop into the proper and effective workers that they must be."
  KLK_stal_left_3:0 "The Indo-Lemurian Revolutions"
- KLK_stal_left_3_desc:0 ""
+ KLK_stal_left_3_desc:0 "Our Mandalist brethren are trying to unite their people, but they are sadly misguided in their attempts to use mandalism rather than true Socialism to accomplish this. We must bring them into the Glorious World Revolution."
  KLK_stal_left_4:0 "Bring Them into the Fold"
- KLK_stal_left_4_desc:0 ""
+ KLK_stal_left_4_desc:0 "We've broached the subject of True Socialism versus the false equivalent of Mandalism - now we must bring the people of our Mandalist neighbors the news of True Socialism, even though the governments defy logic."
  KLK_stal_right_1:0 "The Ministry of Infrastructure"
- KLK_stal_right_1_desc:0 ""
+ KLK_stal_right_1_desc:0 "Our nation is not united enough to allow the Revolution to flourish properly. By tying each region more closely together through infrastructure projects we can not only unite our people but employ them too!"
  KLK_stal_right_2:0 "Mass-Transit System"
- KLK_stal_right_2_desc:0 ""
+ KLK_stal_right_2_desc:0 "To get our workers from Point A to Point B can be a real challenge. If we incorporate mass-transit systems into our urban development, and tie them in with inter-regional transport systems, we can ensure effective movement of troops and supplies to further  the Revolution!"
  KLK_stal_right_3:0 "Comrades Beyond the Seas"
- KLK_stal_right_3_desc:0 ""
+ KLK_stal_right_3_desc:0 "Each nation must walk its own path toward the true goal, but some nations are closer to the path than others. By opening dialogues with small groups abroad we can help our socialist brothers and sisters abroad."
  KLK_stal_right_4:0 "Spreading the Revolution"
- KLK_stal_right_4_desc:0 ""
+ KLK_stal_right_4_desc:0 "To live the Socialist Revolution is to spread the Socialist Revolution. We must bring our foreign neighbors to the truth of Socialism!"
  KLK_synd_dead_branch:0 "Redistribute the Seized Wealth"
- KLK_synd_dead_branch_desc:0 ""
+ KLK_synd_dead_branch_desc:0 "The People need the resources we've seized to further the transition to a more equitable system."
  KLK_synd_right_1:0 "Cooperation Beyond Borders"
- KLK_synd_right_1_desc:0 ""
+ KLK_synd_right_1_desc:0 "Our Indo-Lemurian brothers and sisters have known the truth for generations: the Mandalam have always been there to guide our people aright. We will remind them of the truth they've always known."
  KLK_synd_right_2:0 "The Red Wave Arrives"
- KLK_synd_right_2_desc:0 ""
+ KLK_synd_right_2_desc:0 "The growth of Mandalism is inevitable and desireable - we can be the catalyst to bring it to our neighbors near and far."
  KLK_synd_right_A:0 "The Heart of Lemuria"
- KLK_synd_right_A_desc:0 ""
+ KLK_synd_right_A_desc:0 "The borders of Kalari used to extend further into the interior of the continent, and as such, the true governance of the Mandalam also extends to the ancient borders."
  KLK_synd_right_B:0 "The Old Empire"
- KLK_synd_right_B_desc:0 ""
+ KLK_synd_right_B_desc:0 "Many dynasties have called Kumari Kandam home, but none have right to claim true and lasting governance over the people like the Mandalam. The rightful governors of the people, the people themselves, must determine their fate."
  KLK_synd_right_C:0 "The March Kings"
- KLK_synd_right_C_desc:0 ""
+ KLK_synd_right_C_desc:0 "Each of the former lands of the ancient March Kings now holds a degenerate and corrupt system which oppresses its people. We must bring them back to an understanding of their roots."
  KLK_synd_center_1:0 "Formalize the Mandalams"
- KLK_synd_center_1_desc:0 ""
+ KLK_synd_center_1_desc:0 "\"Each mandala, established under the direction of the people, will be entitled to support from the central government and will be required to provide an account of its stewardship on a regular basis.\""
  KLK_synd_center_2:0 "Integrate the Interior"
- KLK_synd_center_2_desc:0 ""
+ KLK_synd_center_2_desc:0 "Many years of neglect have driven a wedge between the interior villages and the seat of central government. If we focus our efforts on mending this divide we can bring them in line with the national changes taking place."
  KLK_synd_dead_branch_2:0 "Local Militias"
- KLK_synd_dead_branch_2_desc:0 ""
+ KLK_synd_dead_branch_2_desc:0 "\"Each Mandala is responsible for providing military forces to the National Mandala comprised of no less than 10% of their population.\""
  KLK_synd_center_left_1:0 "Basic Healthcare"
- KLK_synd_center_left_1_desc:0 ""
+ KLK_synd_center_left_1_desc:0 "A dead worker provides no benefit to the state. A sick worker, too, provides little benefit to his fellow workers. We must ensure the health and wellbeing of our nation by providing basic healthcare."
  KLK_synd_center_left_2:0 "Social Welfare"
- KLK_synd_center_left_2_desc:0 ""
+ KLK_synd_center_left_2_desc:0 "The workers who have served their fellow men faithfully have a right to expect society to continue to provide for their needs once they've passed their years of contribution."
  KLK_synd_center_right_1:0 "The Pattaraikal"
  KLK_synd_center_right_1_desc:0 "Inspired by the 'Ateliers Nationaux' of the French Second Republic, the Pattaraikal are non-specialized factories where menial tasks are done. Although they don't produce high quality equipment, they serve the social purpose of employing the young and jobless, and also double as a technical education center."
  KLK_synd_center_right_2:0 "Improvised Arms Factories"
- KLK_synd_center_right_2_desc:0 ""
+ KLK_synd_center_right_2_desc:0 "Almost anything can be made into a weapon, so by extension this means that almost any production line can be converted into making weapons for the defense of the people."
  KLK_synd_final:0 "The Red Kingdom"
- KLK_synd_final_desc:0 ""
+ KLK_synd_final_desc:0 "We have convinced our people of the wisdom of the Mandalam. By bringing the disparate regions into the system of Mandalam we have united the nation. Now, we can devote our attention to ensuring the compliance of our neighbors with the Mandalam and to spreading the wisdom of the Mandalam abroad."
  KLK_state_1:0 "Funds for the Civilian Sector"
  KLK_state_1_desc:0 ""
  KLK_state_2:0 "Kalari Institute of Sciences"
  KLK_state_2_desc:0 ""
- KLK_state_3:0 "Build the Laragiya's National Armory"
+ KLK_state_3:0 "Build the Laragiya National Armory"
  KLK_state_3_desc:0 ""
  KLK_pop_1:0 "Women's Emancipation"
  KLK_pop_1_desc:0 ""
