--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -96,55 +96,55 @@
  KLK_synd_final:0 "The Red Kingdom"
  KLK_synd_final_desc:0 "We have convinced our people of the wisdom of the Mandalam. By bringing the disparate regions into the system of Mandalam we have united the nation. Now, we can devote our attention to ensuring the compliance of our neighbors with the Mandalam and to spreading the wisdom of the Mandalam abroad."
  KLK_state_1:0 "Funds for the Civilian Sector"
- KLK_state_1_desc:0 ""
+ KLK_state_1_desc:0 "We are far behind not only our neighbors, but much of the rest of the world, when it comes to technological innovations. We must improve our higher education to bring our nation into the future."
  KLK_state_2:0 "Kalari Institute of Sciences"
- KLK_state_2_desc:0 ""
+ KLK_state_2_desc:0 "Even the common man knows that without the innovations and technologies our scientists invent that we will be stuck in the past, forever behind our enemies and neighbors. We must upgrade our scientific establishment!"
  KLK_state_3:0 "Build the Laragiya National Armory"
- KLK_state_3_desc:0 ""
+ KLK_state_3_desc:0 "Preparation is the key to success, whether in politics or war. By stockpiling weaponry and other war fighting materiel we can ensure the safety and security of Kalari."
  KLK_pop_1:0 "Women's Emancipation"
- KLK_pop_1_desc:0 ""
+ KLK_pop_1_desc:0 "The women of our nation, while undisputed defenders of hearth and home, have not had a say in governance until now. We must right the wrongs of the past and bring Kalari women into the fold of politics and governance."
  KLK_pop_2:0 "Community Service"
- KLK_pop_2_desc:0 ""
+ KLK_pop_2_desc:0 "Besides the dictates of our political and cultural systems, we must ensure that every member of the community knows that they are an integral part of our nation, and that their efforts and struggles on behalf of the people are honored."
  KLK_pop_3:0 "Free Education"
- KLK_pop_3_desc:0 ""
+ KLK_pop_3_desc:0 "No Kalari youth should languish in ignorance while we have the power to better their life! An safety, food, and an education are the duties that we owe to the children of our nation!"
  KLK_final_center:0 "Army Reforms"
- KLK_final_center_desc:0 ""
+ KLK_final_center_desc:0 "The old ways of fighting war will not work any more. Reforms, while difficult, are necessary to the efficacy and morale of our armed forces."
  KLK_youth:0 "Mobilize the Youth"
- KLK_youth_desc:0 ""
+ KLK_youth_desc:0 "To ignore the youth of our nation is to ignore our future - we must prepare the way for our brave youth to prepare themselves for national service in the armed forces."
  KLK_foreigners:0 "Foreign Voluntary Forces"
- KLK_foreigners_desc:0 ""
+ KLK_foreigners_desc:0 "Should any man willing to fight for the good of the Kalari people be turned away from serving the nation? No, of course not!"
  KLK_military_main:0 "Preparing for War"
- KLK_military_main_desc:0 ""
+ KLK_military_main_desc:0 "The Americans have a saying, \"The only good defense is a good offense.\" and while it sounds very aggressive, there is a certain beautiful logic."
  KLK_quality:0 "Professional Soldiers"
- KLK_quality_desc:0 ""
+ KLK_quality_desc:0 "War should be left to professional soldiers. They will have the training and the focus to effectively fight our wars, and the discipline to be properly lead."
  KLK_quantity:0 "A Large Militia"
- KLK_quantity_desc:0 ""
+ KLK_quantity_desc:0 "Every man must be ready to fight for his nation! A large mass of men, even poorly equipped, can overcome even the most professional army."
  KLK_air:0 "Air Research"
- KLK_air_desc:0 ""
+ KLK_air_desc:0 "Armies are generally poorly armored against threats from the air - so we should put more weapons into the air!"
  KLK_quality_guns:0 "Weapon Modernization"
- KLK_quality_guns_desc:0 ""
+ KLK_quality_guns_desc:0 "Some of the older weapon designs, while familiar, suffer from some serious faults. We must put an increased focus on improving our weapons."
  KLK_quality_motor:0 "Motorized Support"
- KLK_quality_motor_desc:0 ""
+ KLK_quality_motor_desc:0 "A man on foot cannot move as far or as fast as a motorized transport. On top of that a single truck can carry more supplies than 500 men. By utilizing these motorized transports we can move men and materiel more effectively."
  KLK_quality_fighters:0 "Air Superiority"
- KLK_quality_fighters_desc:0 ""
+ KLK_quality_fighters_desc:0 "Other nations have developed airplanes to shoot down other aircraft. We must not be left behind in the race toward air superiority!"
  KLK_quality_armor:0 "Armored Warfare"
- KLK_quality_armor_desc:0 ""
+ KLK_quality_armor_desc:0 "Since the early experiments in armored warfare during the Great War the utility of heavy, armored units has been indisputably proven. We must prepare our own 'panzer' units."
  KLK_quality_CAS:0 "Attack Airplanes"
- KLK_quality_CAS_desc:0 ""
+ KLK_quality_CAS_desc:0 "The early efforts to produce air units demonstrated the wonderful advantage that they can produce during a conflict. Now we must focus on improving our air-to-ground attacks."
  KLK_quantity_guns:0 "Gun Imports"
- KLK_quantity_guns_desc:0 ""
+ KLK_quantity_guns_desc:0 "By importing foreign weapons we can both equip our soldiers and improve our own weapon designs."
  KLK_quantity_2:0 "Lower the Bar for Recruitment"
- KLK_quantity_2_desc:0 ""
+ KLK_quantity_2_desc:0 "Previously we have rejected some from serving in the military. We cannot reject any hands that can hold a weapon and pull the trigger."
  KLK_quantity_time:0 "Large Training Fields"
- KLK_quantity_time_desc:0 ""
+ KLK_quantity_time_desc:0 "Effective maneuvers require sufficient training. By increasing the size of our training fields we can improve our military training."
  KLK_quantity_motor:0 "Repurpose Civilian Vehicles"
- KLK_quantity_motor_desc:0 ""
+ KLK_quantity_motor_desc:0 "More than specially designed vehicles we just need more of anything. By repurposing civilian vehicles we can increase the number of men we can move to the front."
  KLK_quantity_cheap_ass_airplanes:0 "Purchase Foreign Airplanes"
- KLK_quantity_cheap_ass_airplanes_desc:0 ""
+ KLK_quantity_cheap_ass_airplanes_desc:0 "We do not have enough aircraft to truly fight our wars. We cannot construct enough to meet our needs, so we should purchase more from abroad."
  KLK_military_final:0 "Navy Expansion Program"
- KLK_military_final_desc:0 ""
+ KLK_military_final_desc:0 "Wars are not  just fought on land or in the air, we must also defend our coasts from invaders!"
  KLK_military_final_2:0 "New Dockyards"
- KLK_military_final_2_desc:0 ""
+ KLK_military_final_2_desc:0 "Our admirals complain of an insufficient number of hulls to defend our nation. We must produce more to protect ourselves!"
  
  ####### ideas
  KLK_bunch_of_ugly_commies:0 "Mandalism on the Rise"
