Frisland fixed, FSM gfx fixed too

--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -335,18 +335,18 @@
  DES_democratic_ADJ:0 "Deseretan"
  DES_neutrality_ADJ:0 "Deseretan"
  DES_communism_ADJ:0 "Western Socialist"
- FRI_fascism:0 "Frisland"
- FRI_fascism_DEF:0 "the Frisland Riki"
- FRI_democratic:0 "Frisland"
- FRI_democratic_DEF:0 "Frisland"
- FRI_neutrality:0 "Frisland"
- FRI_neutrality_DEF:0 "Frisland"
- FRI_communism:0 "Socialist Republic of Frisland"
- FRI_communism_DEF:0 "the Socialist Republic of Frisland"
- FRI_fascism_ADJ:0 "Frislandic"
- FRI_democratic_ADJ:0 "Frislandic"
- FRI_neutrality_ADJ:0 "Frislandic"
- FRI_communism_ADJ:0 "Frislandic"
+ FRS_fascism:0 "Frisland"
+ FRS_fascism_DEF:0 "the Frisland Riki"
+ FRS_democratic:0 "Frisland"
+ FRS_democratic_DEF:0 "Frisland"
+ FRS_neutrality:0 "Frisland"
+ FRS_neutrality_DEF:0 "Frisland"
+ FRS_communism:0 "Socialist Republic of Frisland"
+ FRS_communism_DEF:0 "the Socialist Republic of Frisland"
+ FRS_fascism_ADJ:0 "Frislandic"
+ FRS_democratic_ADJ:0 "Frislandic"
+ FRS_neutrality_ADJ:0 "Frislandic"
+ FRS_communism_ADJ:0 "Frislandic"
  ATL_fascism:0 "Atlantis"
  ATL_fascism_DEF:0 "the Empire of Atlantis"
  ATL_democratic:0 "Atlantis"
