Minor KLK stuff

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -169,6 +169,8 @@
  KLK_privatized_lands:0 "Anger over Privatization"
  KLK_holidays:0 "Consumerist Holidays"
  KLK_deep_state:0 "The Deep State"
+ KLK_emancipation:0 "Liberated Women"
+ KLK_community_service:0 "Community Service"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
