WTS focus fixes

--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -302,5 +302,5 @@ WTS_church_recruitment_3:0 "Miriamsville Recruitment"
 WTS_church_recruitment_3_desc:0 "Miriamsville has risen up the challenge,being so close to the inevitable conflic zone. They should feel threatened"
 
 WTS_inevitable:0 "The Inevitable"
-WTS_inevitable_desc:0 The Forces of Geq march just outside our borders, We hope we have done all we could to prevent war through a show of force."
+WTS_inevitable_desc:0 "The Forces of Geq march just outside our borders, We hope we have done all we could to prevent war through a show of force."
 
