working on Mandalism

--- a/localisation/AML_parties_l_english.yml
+++ b/localisation/AML_parties_l_english.yml
@@ -1,4 +1,8 @@
 ﻿l_english:
+ mandalism:0 "Mandalism"
+ mandalism_desc:0 "Mandalism"
+ islamic_fundamentalism:0 "Islamic Fundamentalism"
+ islamic_fundamentalism_desc:0 "Islamic Fundamentalism"
  MUU_fascism_party:0 "Mu Virinji Partizi"
  MUU_communism_party:0 "Munu Qomiunist Partizi"
  MUU_democratic_party:0 "Temoqrazi Partizi"
@@ -32,4 +36,4 @@
  KUM_democratic_party:0 "Liberal Democratic Party"
  KUM_neutrality_party:0 "Kumari Royalist Movement"
  KUM_communism_party:0 "Communist Party of Kumari"
- KUM_fascism_party:0 "Kumari Kandum Congress"
+ KUM_fascism_party:0 "Kumari Kandam Congress"
