Meru Kumari Advisors and Co.s

--- a/localisation/MKU_l_english.yml
+++ b/localisation/MKU_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english: 
+ MKU_western_tech_aid:0 "Western Technical Aid"
+ 
  MKU_hungry_years:0 "The Hungry Years"
  MKU_hungry_years_desc:0 "The global economic collapse destroyed our already fragile economy. We must determine how we are to recover from this tragedy without burdening our people too much." 
  MKU_appeal_west:0 "Appeal to the West"
@@ -175,3 +177,67 @@
  MKU_military_infrast_focus_desc:0 "To prepare for the possible conflicts in the coming years we must provide housing and support structures for our military units."
  MKU_military_research_initiative:0 "Military Research Initiative"
  MKU_military_research_initiative_desc:0 "'A man with a stick will lose to a man with a bow.' Even the ancients understood that military innovation will lead to victory!"
+ 
+ gedriza_pantashan:0 "Gedriza Pantashan"
+ atahiman_nayanendra:0 "Atahiman Nayanendra"
+ predigar_tatamize:0 "Predigar Tatamize"
+ liqorin_ertusul:0 "Liqorin Ertusul"
+ lanshatri_narbaha:0 "Lanshatri Narbaha"
+ wessampiri_cutraska:0 "Wessampiri Cutraska"
+ opprusnal_dertisgartha:0 "Opprusnal Dertisgartha"
+ wannantri_seksharkarthe:0 "Wannantri Seksharkarthe"
+ tunriska_untrimir:0 "Tunriska Untrimir"
+ orburunghitha_amtrishtha:0 "Orburunghitha Amtrishtha"
+ ilmoragri_vingradri:0 "Ilmoragri Vingradri"
+ jashasthra_buthrami:0 "Jashasthra Buthrami"
+ nebbriste_merimora:0 "Nebbriste Merimora"
+ cheshmirtri_meshmratme:0 "Cheshmirtri Meshmratme"
+ shintrantra_elintu:0 "Shintrantra Elintu"
+ omordura_dimtristra:0 "Omordura Dimtristra"
+ itrashantri_rinporna:0 "Itrashantri Rinporna"
+ ermeti_urtunrima:0 "Ermeti Urtunrima"
+ amran_treshtrin:0 "Amran Treshtrin"
+ kohran_rantri:0 "Kohran Rantri"
+ olutripan_ramnagran:0 "Olutripan Ramnagran"
+ pontrimatri_lensashre:0 "Pontrimatri Lensashre"
+ vekrinta_selamta:0 "Vekrinta Selamta"
+ hashtrat_uvruvatri:0 "Hashtrat Uvruvatri"
+ intornera_ongre:0 "Intornera Ongre"
+ tumus_umtrishu:0 "Tumus Umtrishu"
+ dvashrat_pameshra:0 "Dvashrat Pameshra"
+ ertushat_perginvannu:0 "Ertushat Perginvannu"
+ numeshre_civvandra:0 "Numeshre Civvandra"
+ ashmeq_nelverimma:0 "Ashmeq Nelverimma"
+ mekil_beppantra:0 "Mekil Beppantra"
+ jutri_hapnidra:0 "Jutri Hapnidra"
+ limtri_eshgashina:0 "Limtri Eshgashina"
+ iloporga_wisannatra:0 "Iloporga Wisannatra"
+ avnati_dringatri:0 "Avnati Dringatri"
+ trimandra_entupara:0 "Trimandra Entupara"
+ humenin_destriga:0 "Humenin Destriga"
+ nashtra_mechanical_solutions:0 "Nashtra Mechanical Solutions"
+ nekindra_industries_armor_div:0 "Nekindra Industries Armor Division"
+ werdigarta_tringatri:0 "Werdigarta Tringatri"
+ meru_kumari_national:0 "Meru Kumari National"
+ ullantri_naval:0 "Ullantri Naval"
+ nekindra_industries_naval_division:0 "Nekindra Industries Naval Division"
+ talmeru_and_sons:0 "Talmeru and Sons"
+ pordintri_shipbuilding:0 "Pordintri Shipbuilding"
+ nekindra_industries_air:0 "Nekindra Industries Air Division"
+ indolemurian_air_manuf:0 "Indolemurian Air Manufacturing"
+ saffron_skies:0 "Saffron Skies"
+ shamsala:0 "Shamsala"
+ kopf_und_grenzig_intl:0 "Kopf und Grenzig International"
+ laprastra_arms:0 "Laprastra Arms"
+ nekindra_industries_mot:0 "Nekindra Industries Motorized Division"
+ umigatre_steelworks:0 "Umigatre Steelworks"
+ meru_kumari_national_oil:0 "Meru Kumari National Oil"
+ gatsinal_international:0 "Gatsinal International"
+ nekindra_industries:0 "Nekindra Industries"
+ huneshar_mintetri:0 "Huneshar Mintetri"
+ naradrisha_gamutrandra:0 "Naradrisha Gamutrandra"
+ torminel_tinshamra:0 "Torminel Tinshamra"
+ bergamun_neprintri:0 "Bergamun Neprintri"
+ semshu_minvrindri:0 "Semshu Minvrindri"
+ sindrin_cortanrda:0 "Sindrin Cortanrda"
+ ahintu_shandrindri:0 "Ahintu Shandrindri"
