--- a/localisation/AML_victory_points_l_english.yml
+++ b/localisation/AML_victory_points_l_english.yml
@@ -244,3 +244,4 @@
  VICTORY_POINTS_8799:0 "Yirram"
  VICTORY_POINTS_14456:0 "Pilesbury"
  VICTORY_POINTS_14903: "Sanggofesaran"
+ VICTORY_POINTS_13583: "Pennston"
