--- a/localisation/replace/AML_strategic_region_names_l_english.yml
+++ b/localisation/replace/AML_strategic_region_names_l_english.yml
@@ -58,7 +58,7 @@
  STRATEGICREGION_57:0 "Sargasso Sea"
  STRATEGICREGION_58:0 "Central Atlantic Gap"
  STRATEGICREGION_59:0 "Antillian Approaches"
- STRATEGICREGION_60:0 "North Lemurian Ocean"
+ STRATEGICREGION_60:0 "Northern Lemurian Ocean"
  STRATEGICREGION_61:0 "Cap Verde Plain"
  STRATEGICREGION_62:0 "Gulf Of Guinea"
  STRATEGICREGION_63:0 "Argentine Coast"
@@ -240,7 +240,7 @@
  STRATEGICREGION_239:0 "Haida Sea"
  STRATEGICREGION_240:0 "Bonneville Sea"
  STRATEGICREGION_241:0 "Northwest Passage"
- STRATEGICREGION_242:0 "Californian Sea"
+ STRATEGICREGION_242:0 "Sea of Cortez"
  STRATEGICREGION_243:0 "California Island"
  STRATEGICREGION_244:0 "Cascadia"
  STRATEGICREGION_245:0 "The Kolpo"
@@ -253,3 +253,7 @@
  STRATEGICREGION_252:0 "Afro-Lemuria"
  STRATEGICREGION_253:0 "Pantiya"
  STRATEGICREGION_254:0 "Marekatan Peninsula"
+ STRATEGICREGION_255:0 "STRATEGICREGION_255"
+ STRATEGICREGION_256:0 "Sumatran Sea"
+ STRATEGICREGION_257:0 "Western Australia"
+ STRATEGICREGION_258:0 "Mazu Reach"
