--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -59,6 +59,12 @@ WTS_political_scramble_desc:0 "Geq has conquered Vashparaq, and continues marchi
 WTS_prepared:0 "Governemnt Stablized"
 WTS_prepared_desc:0 "We have done all we can to prepare against Geq, only time will tell if they were nescesary."
 
+WTS_tropic_troops:0 "Acclimated Military"
+WTS_tropic_troops_desc:0 "Our gear has been redesigned to better suit the needs in our tropical enviroment."
+
+WTS_british_rejection:0 "Tarrifs on the British"
+WTS_british_rejection_desc:0 "Since our independence we rejected trade with the British Empire and her Subjects. Given they are the largest empire its only natural trade would suffer under such imposing tarrifs"
+
 #Wrightsylvania Focus tree name and descriptions
 #Politics
 WTS_political_effort:0 "A New Era"
@@ -241,7 +247,7 @@ WTS_destroyer_effort:0 "Naval Improvements"
 WTS_destroyer_effort_desc:0 "Our navy is for the coast, but that doesnt mean it shouldnt be outdated"
 
 WTS_marine_effort:0 "Troops of the Tropics"
-WTS_marine_effort_desc:0 "A Specialized Unit designed for our the tropical land that our home is. 
+WTS_marine_effort_desc:0 "Our tropical land that is our home is a boon to our troops. With proper training we can mitigate some of the effects the climate has on us. 
 
 WTS_equipment_effort_3:0 "Improved Tropicals Designs"
 WTS_equipment_effort_3_desc:0 "With a small amount of funding, we should be able to keep pace with
