Adjusted Focus Tree
Adjusted Focus Tree

Touched up Ideas.

Hidden cat puns in the localization

--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -111,14 +111,14 @@ WTS_new_rights_desc:0 "If our economy is to function we must allow women to vote
 WTS_new_constitution:0 "Amend the Constitution"
 WTS_new_constitution_desc:0 "Their are some in are nation who refuse to accept Womens rights, by modifying the constitution it will be embeded into law."
 
-WTS_encourage_peace:0 "Peace through Humility"
-WTS_encourage_peace_desc:0 "We must realize that to truly have a peace of mind. We must have peace at home."
+WTS_encourage_peace:0 "Free'd Up Men"
+WTS_encourage_peace_desc:0 "With women entering the workforce, more men have volunteered for the military"
 
 WTS_raphaels_children:0 "Support Staff"
 WTS_raphaels_children_desc:0 "With women taking part in the workforce more men can join the military."
 
-WTS_womens_suffrage:0 "Strength in Unity"
-WTS_womens_suffrage_desc:0 "Ben Wright would be proud to see how far his nation has come. Lets do him proud and continue to spread peace through the world."
+WTS_unity:0 "Strength in Unity"
+WTS_unity_desc:0 "Ben Wright would be proud to see how far his nation has come. Lets do him proud and continue to spread peace through the world."
 
 WTS_join_france:0 "Ally with France"
 WTS_join_france_desc:0 "We humbly ask to join the French in hopes for future peace across the globe."
@@ -165,6 +165,7 @@ WTS_join_italy_desc:0 "The Italian advisors have done us well. The people wish f
 
 WTS_battleship:0 "Battleship Wormwood"
 WTS_battleship_desc:0 "The Great Depresion crippled us, we commisioned a battleship to keep the steelmills open.The project coming to completion and we need to find a new way to keep the economy from buckling."
+WTS_battleship_tt:0 "Spawns a battleship of questionable quality."
 
 WTS_industrial_effort:0 "Wrightston Industies"
 WTS_industrial_effort_desc:0 "Our industry is vital. We need to do everything in our power to keep it functioning at minimum capacity for as long as possible."
@@ -276,7 +277,7 @@ WTS_CAS_effort:0 "Yorsine Angels"
 WTS_CAS_effort_desc:0 "Yoursine has improved their designs to allow aircraft to direcly engage in battle with the infantry."
  
 WTS_aviation_effort_2:0 "Theories of the Sky"
-WTS_aviation_effort_2_desc:0 "With sever aircraft being manufacutred, we must learn how to better integrate them into our armed forces."
+WTS_aviation_effort_2_desc:0 "With several aircraft being manufacutred, we must learn how to better integrate them into our armed forces."
 
 #Geq
 
@@ -293,7 +294,7 @@ WTS_terrified_arms_3:0 "Purchase Comunist Weapons"
 WTS_terrified_arms_3_desc:0 "The Soviets said they would willingly part with some of their latest designs for field testing."
 
 WTS_makeshift_defenses:0 "Trenches in the North"
-WTS_makeshift_defenses_desc:0 "We have ordered the army to begin constructing fortifications agains the former Vashparaq border in anticipation of an attack"
+WTS_makeshift_defenses_desc:0 "We have ordered the army to begin constructing fortifications against the former Vashparaq border in anticipation of an attack"
 
 WTS_makeshift_defenses_2:0 "Proper Fortifications"
 WTS_makeshift_defenses_2_desc:0 "Concrete and steel has been redirected to continue fortifying the border, proper bunkers are being put in place as fast as the concrete settles"
@@ -305,7 +306,7 @@ WTS_church_recruitment_2:0 "Pennston Recruitment"
 WTS_church_recruitment_2_desc:0 "The churches in Penston have beat us to it and have already been shoring up recruitment in the region."
 
 WTS_church_recruitment_3:0 "Miriamsville Recruitment"
-WTS_church_recruitment_3_desc:0 "Miriamsville has risen up the challenge,being so close to the inevitable conflic zone. They should feel threatened"
+WTS_church_recruitment_3_desc:0 "Miriamsville has risen up the challenge, being so close to the inevitable conflic zone. They should feel threatened"
 
 WTS_inevitable:0 "The Inevitable"
 WTS_inevitable_desc:0 "The Forces of Geq march just outside our borders, We hope we have done all we could to prevent war through a show of force."
