--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -2,7 +2,7 @@
 
 ATL_AI_BEHAVIOR:0 "@ATL Atlantis"
 MUU_AI_BEHAVIOR:0 "@MUU Federal Republic of Mu"
-FSM_AI_BEHAVIOR:0 "@FSM Freistaat von Mu"
+FMU_AI_BEHAVIOR:0 "@FMU Freistaat von Mu"
 
 #Atlantis Rules
 RULE_OPTION_COMMUNIST_ATL_AI_DESC:0 "Atlantis will try to reform itself into a communist state and ally itself with the Soviet Union or another major Communist State"
@@ -20,10 +20,10 @@ RULE_MONARCHIST_MUU_AI_DESC:0 "The Federal Republic of Muu will attempt to resto
 RULE_FASCIST_MUU_AI_DESC:0 "Fasci Descriptor soon"
 
 #Blue Mu Rules
-RULE_OPTION_COMMUNIST_FSM_AI_DESC:0 "Commie Descriptor soon"
-RULE_OPTION_DEMOCRATIC_FSM_AI_DESC:0 "Democrat Descripter soon"
-RULE_OPTION_FSM_HISTORICAL:0 "Fascist"
-RULE_HISTORICAL_FSM_AI_DESC:0 "The Friestaat of Muu will attempt to flip fascist and join the Axis"
+RULE_OPTION_COMMUNIST_FMU_AI_DESC:0 "Commie Descriptor soon"
+RULE_OPTION_DEMOCRATIC_FMU_AI_DESC:0 "Democrat Descripter soon"
+RULE_OPTION_FMU_HISTORICAL:0 "Fascist"
+RULE_HISTORICAL_FMU_AI_DESC:0 "The Friestaat of Muu will attempt to flip fascist and join the Axis"
 
 #Wrightsylvania Ideas
 WTS_struggling_economy:0 "Industrial Life Support"
@@ -66,7 +66,7 @@ WTS_british_rejection:0 "Tarrifs on the British"
 WTS_british_rejection_desc:0 "Since our independence we rejected trade with the British Empire and her Subjects. Given they are the largest empire its only natural trade would suffer under such imposing tarrifs"
 
 #Wrightsylvania Focus tree name and descriptions
-#Politics
+#Polikittens
 WTS_political_effort:0 "A New Era"
 WTS_political_effort_desc:0 "Its been six years since the great depression. The friends are anxious something must be done to satiate the populace."
 #Commie Cat Tree
