--- a/localisation/WTS_l_english.yml
+++ b/localisation/WTS_l_english.yml
@@ -300,7 +300,7 @@ WTS_makeshift_defenses_2:0 "Proper Fortifications"
 WTS_makeshift_defenses_2_desc:0 "Concrete and steel has been redirected to continue fortifying the border. Proper bunkers are being put in place as fast as the concrete cures."
 
 WTS_church_recruitment:0 "Wrightston Recruits"
-WTS_church_recruitment_desc:0 "The recruitment push in Wrightston, urging men to take up arms in defense of their women, children and homes, have proven effective. We now have more troops in training to help shore up our national defenses."
+WTS_church_recruitment_desc:0 "The recruitment push in Wrightston, urging men to take up arms in defense of their women, children and homes, has proven effective. We now have more troops in training to help shore up our national defenses."
 
 WTS_church_recruitment_2:0 "Pennston Recruitment"
 WTS_church_recruitment_2_desc:0 "The recruitment drives in Penston have beat us to it and have already been shoring up recruitment in the region."
